--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     // Okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
 
+    //Gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 }
